--- a/page_du_jour/style.css
+++ b/page_du_jour/style.css
@@ -4,3 +4,21 @@ body
 {
     background: white
 }
+
+#bloc_page
+{
+    width: 100%;
+    margin: auto;
+}
+
+#image_logo
+{
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+}
+
+header
+{
+    display: flex;
+}
