design de la page d'accueil

--- a/page_du_jour/style.css
+++ b/page_du_jour/style.css
@@ -21,4 +21,12 @@ body
 header
 {
     display: flex;
+    border: 2px black solid;
+    padding-top: 10px;
+    padding-left: 5px;
+}
+
+section
+{
+    display: flex;
 }
