--- a/page_du_jour/style.css
+++ b/page_du_jour/style.css
@@ -1,32 +1,27 @@
-@charset "utf-8";
-
 body
 {
-    background: white
+    background-image: url("images/fond_carte.jpg");
+    background-size: cover;
 }
 
 #bloc_page
 {
-    width: 100%;
-    margin: auto;
-}
-
-#image_logo
-{
-    width: 50px;
-    height: 50px;
-    margin-right: 10px;
-}
-
-header
-{
     display: flex;
-    border: 2px black solid;
-    padding-top: 10px;
-    padding-left: 5px;
+    flex-flow: row;
+    justify-content: flex-start;
 }
 
-section
+#droite
 {
-    display: flex;
+    background-color: red;
+}
+
+header 
+{
+    background-color: blue;
+}
+
+#contenu_gauche 
+{
+    background-color: yellow;
 }
