--- a/page_du_jour/style.css
+++ b/page_du_jour/style.css
@@ -1,22 +1,17 @@
-body
-{
-    background-image: url("images/fond_carte.jpg");
-    background-size: cover;
-}
-
 #bloc_page
 {
     display: flex;
     flex-flow: row;
-    justify-content: flex-start;
+    width: 100%;
 }
 
 #droite
 {
     background-color: red;
+    flex: 50%;
 }
 
-header 
+#titre
 {
     background-color: blue;
 }
@@ -24,4 +19,18 @@ header
 #contenu_gauche 
 {
     background-color: yellow;
+}
+
+p 
+{
+  margin-top:0;
+  -webkit-hypens:auto;
+  -moz-hypens:auto;
+  hyphens:auto;
+}
+
+#gauche
+{
+    background-color: green;
+    flex: 50%;
 }
