added first 3 pages

--- a/page_connexion/style.css
+++ b/page_connexion/style.css
@@ -1,6 +1,6 @@
 body
 {
-    background-image: url("images/village.jpg");
+    background-image: url("images/fond.jpg");
     background-size: cover;
 }
 
