--- a/page_du_jour/style1.css
+++ b/page_du_jour/style1.css
@@ -21,6 +21,7 @@ p
 h1 
 {
     font-size: 4em;
+    text-align: center;
     font-family: 'germinabunt';
 }
 
@@ -30,28 +31,10 @@ h2
     font-family: 'germinabunt';
 }
 
-#bloc_page
+#rebus 
 {
-    display: flex;
-    flex-flow: row;
-    width: 100%;
-}
-
-#droite
-{
-    min-width: 0;
-    min-height: 0;
-    flex: 1 0 0;
-    margin-left: 2%;
-    margin-right: 1.5%;
-    margin-top: 1%;
-}
-
-#gauche
-{
-    min-width: 0;
-    min-height: 0;
-    flex: 1 0 0;
-    margin-left: 1%;
-    margin-right: 2%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
