--- a/page_du_jour/style3.css
+++ b/page_du_jour/style3.css
@@ -14,17 +14,15 @@ ul
 {
     margin-left: 1%;
     text-align: justify;
-    font-size: 2em;
-    line-height: 1.5;
+    font-size: 3em;
     font-family: Arial;
     display: inline-block;
 }
 
 h1 
 {
-    font-size: 4em;
+    font-size: 5em;
     font-family: 'germinabunt';
-    text-align: center;
 }
 
 h2 
@@ -35,5 +33,20 @@ h2
 
 #bloc_page
 {
-    width: 100%;
+    display: flex;
+}
+
+#image 
+{
+    background-image: url("images/village2.jpg");
+    background-size: cover;
+    background-position: center;
+    flex: 1;
+    border: solid;
+}
+
+#texte
+{
+    flex: 2;
+    margin: 1em;
 }
