--- a/page_connexion/style.css
+++ b/page_connexion/style.css
@@ -1,20 +1,18 @@
-body
-{
-    background-image: url("images/fond.jpg");
+html {    
+    background: url('images/test.jpg') no-repeat center fixed;     
     background-size: cover;
 }
 
 #bloc_page
 {
-    background-color: white;
+    background-color: orange;
     position: absolute;
     margin: auto;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    width: 300px;
-    height: 200px;
+    height: 10em;
     text-align: center;
     padding: 5px;
 }
