added text to login page

--- a/page_du_jour/style6.css
+++ b/page_du_jour/style6.css
@@ -30,7 +30,7 @@ h1
 
 #image 
 {
-    background-image: url("images/sandwich.jpg");
+    background-image: url("images/village8.jpg");
     background-size: cover;
     background-position: center;
     flex: 1;
