--- a/page_du_jour/style3.css
+++ b/page_du_jour/style3.css
@@ -19,6 +19,15 @@ ul
     display: inline-block;
 }
 
+p
+{
+    margin-left: 1%;
+    text-align: justify;
+    font-size: 3em;
+    font-family: Arial;
+    display: inline-block;
+}
+
 h1 
 {
     font-size: 5em;
