--- a/page_du_jour/style5.css
+++ b/page_du_jour/style5.css
@@ -18,14 +18,6 @@ p
     font-family: Arial;
 }
 
-ol
-{
-    text-align: justify;
-    font-size: 2em;
-    line-height: 1.5;
-    font-family: Arial;
-}
-
 h1 
 {
     font-size: 4em;
@@ -39,11 +31,11 @@ h2
     font-family: 'germinabunt';
 }
 
-#mot 
+#lettre 
 {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 95%;
     border: solid;
 }
